# ocrr-benchmark

./: .gitignore  CITATION.cff  LICENSE  README.md  REPRODUCING.md  datasheet.md  pyproject.toml
ocrr_benchmark/: __init__.py
ocrr_benchmark/datasets/: __init__.py  banking77.py  clinc150.py
ocrr_benchmark/eval/: __init__.py  ocrr.py  ocrr_ablations.py  ocrr_baselines.py  ocrr_systems.py
ocrr_benchmark/memory/: __init__.py  _hnsw.py  episodic.py
paper/: paper.md
results/: ocrr_ablation_results.md  ocrr_ablation_summary.csv  ocrr_full_sweep_results.csv  ocrr_full_sweep_results.md  ocrr_full_sweep_summary.csv  ocrr_llm_icl_partial.md  ocrr_lora_deberta_results.csv  ocrr_lora_deberta_results.md  ocrr_storage_sweep_results.csv  ocrr_storage_sweep_results.md  ocrr_storage_sweep_summary.csv  ocrr_sweep_results.csv  ocrr_sweep_summary.csv  ocrr_v1_results.csv  ocrr_v1_results.md  ocrr_v2_results.md
scripts/: precompute_embeddings.py  run_ocrr.py  run_ocrr_ablation.py  run_ocrr_full_sweep.py  run_ocrr_lora_deberta.py  run_ocrr_storage_sweep.py  run_ocrr_sweep.py  run_substrate_scale_study.py
tests/: test_smoke.py
v3-amtb/: PRE-REGISTRATION.md  README.md  pyproject.toml
v3-amtb/amtb/: __init__.py  matrix.py  metrics.py  types.py
v3-amtb/amtb/axes/: __init__.py  audit.py  crossmodal.py  recall.py  retention.py  revision.py  scale.py
v3-amtb/amtb/systems/: __init__.py  append_only_classifier.py  hash_chained_ledger.py  substring_retriever.py
v3-amtb/tests/: test_axis1_recall.py  test_axis2_retention.py  test_axis3_audit.py  test_axis4_crossmodal.py  test_axis5_scale.py  test_axis6_revision.py  test_matrix.py  test_metrics.py
